# kernel_samsung_sm8750

./: .gitignore  build_kernel_GKI.sh
kernel_platform/: bazel-bin  bazel-kernel_platform  bazel-out  bazel-testlogs  exports.txt  files_gki_aarch64_gen.txt
kernel_platform/common/: BUILD.bazel  consolidate.bzl  localversion
kernel_platform/common-modules/trusty/: BUILD.bazel  PREUPLOAD.cfg  arm_ffa.fragment  build.config.trusty.aarch64  system_heap.fragment  trusty_defconfig.fragment
kernel_platform/common-modules/trusty/drivers/trusty/: trusty-ipc.c  trusty-log.c
kernel_platform/common/android/: abi_gki_aarch64_galaxy  abi_gki_aarch64_vivo
kernel_platform/common/block/: bio.c  blk-mq.c  genhd.c  ioctl.c
kernel_platform/common/drivers/: Makefile
kernel_platform/common/fs/: Kconfig  dcache.c  exec.c  file_table.c  namei.c  namespace.c  open.c  read_write.c  super.c
kernel_platform/common/init/: Kconfig  init_task.c  main.c
kernel_platform/common/kernel/: exit.c  fork.c  panic.c  seccomp.c  signal.c
kernel_platform/common/mm/: Kconfig  filemap.c  khugepaged.c  memory.c  slab.h  swapfile.c  vmalloc.c  vmscan.c
kernel_platform/common/scripts/: link-vmlinux.sh  setlocalversion
kernel_platform/common/security/: Kconfig  security.c
kernel_platform/msm-kernel/: .legofile  BUILD.bazel  Makefile  build.config.msm.kera.le  build.config.msm.qcs610  build.targets  build_with_bazel.py  files_gki_aarch64.txt  kera_le.bzl  lego.bzl  lego_module  modules.bzl  modules.list.msm.monaco  modules.list.msm.qcs610  modules.list.msm.sun  modules_unprotected.bzl  monaco.bzl  msm_kernel_16k_la.bzl  msm_kernel_extensions.bzl  msm_kernel_la.bzl  msm_kernel_le.bzl  msm_platforms.bzl  parrot_tuivm.bzl  qcs610.bzl  sec_power.bzl  sun.bzl  target_variants.bzl
kernel_platform/msm-kernel/android/: ACK_SHA  abi_gki_aarch64_galaxy  abi_gki_aarch64_qcom
kernel_platform/msm-kernel/block/: bfq-iosched.h  blk-cgroup-rwstat.h  blk-cgroup.h  blk-crypto-internal.h  blk-ioprio.h  blk-mq-debugfs.h  blk-mq-sched.h  blk-mq.h  blk-pm.h  blk-rq-qos.h  blk-sec-common.c  blk-sec-stat-pio.c  blk-sec-stat-traffic.c  blk-sec-stat.c  blk-sec.h  blk-stat.h  blk-throttle.h  blk-wbt.h  blk.h  elevator.h  ssg-cgroup.c  ssg-iosched.c  ssg.h
kernel_platform/msm-kernel/crypto/: compress.h  ecc_curve_defs.h  hash.h  internal.h  jitterentropy.h
kernel_platform/msm-kernel/drivers/: Kconfig  Makefile
kernel_platform/msm-kernel/fs/: exec.c  internal.h  mount.h  namespace.c  pnode.h
kernel_platform/msm-kernel/init/: Kconfig  do_mounts.h  init_task.c  main.c
kernel_platform/msm-kernel/io_uring/: advise.h  alloc_cache.h  cancel.h  epoll.h  fdinfo.h  filetable.h  fs.h  io-wq.h  io_uring.h  kbuf.h  msg_ring.h  net.h  nop.h  notif.h  opdef.h  openclose.h  poll.h  refs.h  rsrc.h  rw.h  slist.h  splice.h  sqpoll.h  statx.h  sync.h  tctx.h  timeout.h  uring_cmd.h  xattr.h
kernel_platform/msm-kernel/kernel/: Makefile  audit.h  cred.c  fork.c  kallsyms_internal.h  kprobes.c  smpboot.h  uid16.h  workqueue_internal.h
kernel_platform/msm-kernel/lib/: Kconfig.debug  crc32defs.h  kstrtox.h  radix-tree.h  ubsan.h
kernel_platform/msm-kernel/mm/: Kconfig  cma.c  cma.h  internal.h  mm_slot.h  page_reporting.h  percpu-internal.h  pgalloc-track.h  shuffle.h  slab.h  slub.c  swap.h  vmscan.c
(+4063 files in other folders)
